added heading inside body with hello world message

--- a/hello.html
+++ b/hello.html
@@ -3,4 +3,10 @@
     <head>
         <title> Hello</title>
     </head>
+    <body>
+        hello world!
+        <h1>
+            the new heading inside body
+        </h1>
+    </body>
 </html>
