--- a/hello.html
+++ b/hello.html
@@ -8,5 +8,8 @@
         <h1>
             the new heading inside body
         </h1>
+        <h2>
+            Added heading second on github
+        </h2>
     </body>
 </html>
