--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         hello world!
-        <h1>
+        <h1 style="color:blue;">
             the new heading inside body
         </h1>
         <h2>
